[gd_scene load_steps=7 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://demo.gd" type="Script" id=2]
[ext_resource path="res://save_and_load_manager.gd" type="Script" id=3]
[ext_resource path="res://rotator.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 10 )

[node name="Demo" type="Node2D"]
script = ExtResource( 2 )
save_file_path = "user://save5.tres"

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0, 300 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1024, 300 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2( 512, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2( 512, 600 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 198.425, 133.342 )

[node name="Bouncers" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="SpawnMarginContainer" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnAreaReferenceRect" type="ReferenceRect" parent="UI/SpawnMarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -240.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 161.0
margin_bottom = 200.0
custom_constants/separation = 20

[node name="AddBouncerBtn" type="Button" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Add Bouncer"

[node name="RemoveBouncerBtn" type="Button" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 121.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
text = "Remove Bouncer"

[node name="RemoveRotatorBtn" type="Button" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 121.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 40 )
text = "Remove Rotator"

[node name="SaveAndLoadManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Rotator" parent="." instance=ExtResource( 4 )]
position = Vector2( 523.842, 279.382 )

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/AddBouncerBtn" to="." method="_on_AddBouncerBtn_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/RemoveBouncerBtn" to="." method="_on_RemoveBouncerBtn_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/RemoveRotatorBtn" to="." method="_on_RemoveRotatorBtn_pressed"]
